--- a/src/SingleInstance/SingleInstance/App.config
+++ b/src/SingleInstance/SingleInstance/App.config
@@ -1,6 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <log4net>
+    <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
+      <param name="File" value="SingleInstance.log" />
+      <param name="AppendToFile" value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <param name="ConversionPattern" value="%-5p%d{yyyy-MM-dd hh:mm:ss} – %m%n" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="LogFileAppender" />
+    </root>
+  </log4net>
 </configuration>
